--- a/1.md
+++ b/1.md
@@ -18,9 +18,9 @@
 #include<stdlib.h>
 #include<stdio.h>
 
-int a = 3
-int*p = &a
-printf(%p/n,p)
+int a = 3;
+int*p = &a;
+printf(%p/n,p);
 int main() {
     int*dynamic_arr = (int*)malloc(5 * sizeof(int));
     
@@ -55,9 +55,20 @@ b =b ^ a
 a =a ^ b
 '''
 
-4.
+4.A：八字节
+ B：12字节
 
+5.
+'''c
+include<stdio.h>
+int main(void)
+{
+ int x = 100;
+ printf(%x/n,x);
+return 0;
+}
 
+#严肃的数据库
 
 
 
