--- a/1.md
+++ b/1.md
@@ -70,5 +70,33 @@ return 0;
 
 #严肃的数据库
 
+##问题一
+
+1.持久性
+2.原子性 
+3.一致性
+4.隔离性
+5数据结构化
+6.共享性低冗余
+7.数据独立性
+8.由DBMS统一管理
+
+数据库能够高效地存储和检索数据。通过结构化的方式存储数据，用户可以快速访问和查询所需信息。例如，搜索引擎如百度和谷歌利用数据库技术实现快速搜索。
+
+数据库可以确保数据的一致性和完整性。通过避免重复数据和实施完整性约束，数据库能够减少数据冗余并防止数据错误，从而提高数据的可靠性。
+
+数据库提供了强大的安全性。通过用户权限管理和数据加密等措施，数据库可以防止未经授权的访问。例如，员工的工资信息可以通过数据库设置权限，仅允许特定人员查看。
+
+数据库支持数据共享和协作。多个用户和应用程序可以同时访问和修改数据，从而提高工作效率并减少数据不一致的风险。
+
+数据库具有持久性，能够长期保存数据。即使系统崩溃或重启，数据仍然不会丢失，这确保了数据的稳定性和可用性。
+
+数据库支持复杂的数据分析。通过数据挖掘和分析技术，可以从数据库中提取有价值的信息。例如，超市可以根据销售数据分析商品的销售趋势，从而优化库存管理。
+
+数据库管理系统（DBMS）提供了强大的数据操作能力。用户可以通过SQL等查询语言轻松实现数据的插入、更新、删除和查询，满足各种复杂的业务需求。
+
+---
+
+
 
 
