--- a/1.md
+++ b/1.md
@@ -67,6 +67,7 @@ int main(void)
  printf(%x/n,x);
 return 0;
 }
+'''
 
 #严肃的数据库
 
@@ -96,6 +97,15 @@ return 0;
 数据库管理系统（DBMS）提供了强大的数据操作能力。用户可以通过SQL等查询语言轻松实现数据的插入、更新、删除和查询，满足各种复杂的业务需求。
 
 ---
+
+##可靠的git
+
+1.两个分支中存在相同文件，合并时发生冲突。
+
+解决：git checkout --ours text2.txt
+git add text2.txt
+or:git checkout --theirs text2.txt
+git add text2.txt
 
 
 
