--- a/1.md
+++ b/1.md
@@ -49,10 +49,10 @@ int main() {
 
 3.有的兄弟
 '''c
-int a = 1,b = 2
-a =a ^ b
-b =b ^ a
-a =a ^ b
+   int a = 1,b = 2
+   a =a ^ b
+   b =b ^ a
+   a =a ^ b
 '''
 
 4.A：八字节
@@ -60,13 +60,54 @@ a =a ^ b
 
 5.
 '''c
-include<stdio.h>
-int main(void)
-{
- int x = 100;
- printf(%x/n,x);
-return 0;
+      #include <stdio.h>
+
+      void print_hex(int num) {
+    
+      if (num == 0) {
+        putchar('0');
+        return;
+      }
+
+    
+      unsigned int n = (unsigned int)num;
+    
+    
+      char hex_digits[] = "0123456789ABCDEF";
+    
+    
+      int started = 0; 
+
+    
+      for (int i = 7; i >= 0; i--) {
+        
+        unsigned int digit = (n >> (i * 4)) & 0xF;
+        
+        
+        if (digit == 0 && !started) {
+            continue; 
+        }
+        
+    
+        started = 1;
+        putchar(hex_digits[digit]);
+       }
 }
+
+
+    int main() {
+    int test_numbers[] = {108, 0, -108, 255, 0x7FFFFFFF, 0x80000000};
+    int count = sizeof(test_numbers) / sizeof(test_numbers[0]);
+
+    for (int i = 0; i < count; i++) {
+        int num = test_numbers[i];
+        printf("十进制 %d 的十六进制表示为: ", num);
+        print_hex(num);
+        printf("\n");
+    }
+
+    return 0;
+                }
 '''
 
 #严肃的数据库
