--- a/1.md
+++ b/1.md
@@ -49,13 +49,18 @@
 
 3.有的兄弟
 '''c
-   int a = 1,b = 2
+
+     int main (void )
+     {
+
+     int a = 1,b = 2
    
-   a =a ^ b
+     a =a ^ b
    
-   b =b ^ a
+     b =b ^ a
    
-   a =a ^ b
+     a =a ^ b
+      }
 '''
 
 4.  A：八字节
