--- a/1.md
+++ b/1.md
@@ -53,13 +53,13 @@
      int main (void )
      {
 
-     int a = 1,b = 2
+     int a = 1,b = 2;
    
-     a =a ^ b
+     a =a ^ b;
    
-     b =b ^ a
-   
-     a =a ^ b
+     b =b ^ a;
+     a =a ^ b;
+     return 0;
       }
 
 
