--- a/1.md
+++ b/1.md
@@ -155,13 +155,17 @@
 
 1.两个分支中存在相同文件，合并时发生冲突。
 
-解决：git checkout --ours text2.txt
+解决：      
 
-git add text2.txt
+    git checkout --ours text2.txt
 
-or:git checkout --theirs text2.txt
+    git add text2.txt
 
-git add text2.txt
+    
+ or:   
+ 
+    git checkout --theirs text2.txt
+    git add text2.txt
 
 
 
