--- a/1.md
+++ b/1.md
@@ -167,6 +167,9 @@
     git checkout --theirs text2.txt
     git add text2.txt
 
+2.
 
+       git switch dev-B
+      git cherry-pick <commit-hash>
 
 
