--- a/1.md
+++ b/1.md
@@ -1,16 +1,18 @@
-#后端
+# 后端
 
-##Take it easy
+## Take it easy
 
-1.我认为联创就是联合创造，是大家一起创造一个项目，我觉得能加入联创的都是大佬，希望能和这样的人交流学习，我个人也对创造自己的项目保有极大兴趣。
+1. 我认为联创就是联合创造，是大家一起创造一个项目，我觉得能加入联创的都是大佬，希望能和这样的人交流学习，我个人也对创造自己的项目保有极大兴趣。
 
-2.我现在对未来还比较迷茫，但是我觉得我应该先探索一下未来的道路，多加入一些组织，多认识一些人，多学一些知识，在这个过程中完善自己的规划
+2. 我现在对未来还比较迷茫，但是我觉得我应该先探索一下未来的道路，多加入一些组织，多认识一些人，多学一些知识，在这个过程中完善自己的规划
 
-3.刚开始学，后端就是通过编程语言编写的逻辑代码处理前端发送的用户请求，并且处理数据，再返回结果。前端是表面的界面与交互，而后端就是背后的逻辑与数据。
+3. 刚开始学，后端就是通过编程语言编写的逻辑代码处理前端发送的用户请求，并且处理数据，再返回结果。前端是表面的界面与交互，而后端就是背后的逻辑与数据。
 
-4.无
+4. 无
 
-##可爱的C
+---
+
+## 可爱的C
 
 1.c
 
@@ -45,22 +47,22 @@
     return 0;
      }
 
-2.不能，因为这样定义的字符串储存在常量区，无法修改
+2. 不能，因为这样定义的字符串储存在常量区，无法修改
 
-3.有的兄弟
+3. 有的兄弟
 
 
-     int main (void )
-     {
+       int main (void )
+       {
 
-     int a = 1,b = 2;
+       int a = 1,b = 2;
    
-     a =a ^ b;
+       a =a ^ b;
    
-     b =b ^ a;
-     a =a ^ b;
-     return 0;
-      }
+       b =b ^ a;
+       a =a ^ b;
+       return 0;
+        }
 
 
 4.  A：八字节
@@ -121,19 +123,20 @@
        return 0;
                 }
 
+---
 
-#严肃的数据库
+# 严肃的数据库
 
-##问题一
+## 问题一
 
-1.持久性
-2.原子性 
-3.一致性
-4.隔离性
-5数据结构化
-6.共享性低冗余
-7.数据独立性
-8.由DBMS统一管理
+1. 持久性
+2. 原子性 
+3. 一致性
+4. 隔离性
+5. 数据结构化
+6. 共享性低冗余
+7. 数据独立性
+8. 由DBMS统一管理
 
 数据库能够高效地存储和检索数据。通过结构化的方式存储数据，用户可以快速访问和查询所需信息。例如，搜索引擎如百度和谷歌利用数据库技术实现快速搜索。
 
@@ -149,11 +152,19 @@
 
 数据库管理系统（DBMS）提供了强大的数据操作能力。用户可以通过SQL等查询语言轻松实现数据的插入、更新、删除和查询，满足各种复杂的业务需求。
 
+## 问题二
+
+~还在学~
+
+## 问题三
+
+~还在了解~
+
 ---
 
-##可靠的git
+# 可靠的git
 
-1.两个分支中存在相同文件，合并时发生冲突。
+1. 两个分支中存在相同文件，合并时发生冲突。
 
 解决：      
 
@@ -171,5 +182,54 @@
 
        git switch dev-B
       git cherry-pick <commit-hash>
+
+# 精妙的计算机网络
+
+1. 据我所知，域名是方便我们记住的的一个代号，计算机无法理解，而ip地址以计算机可以理解的形式存在，是一个明确的坐标。之所以要解析就是为了翻译给计算机看。
+
+至于DNS，首先当你输入了域名并回车，浏览器会先检查缓存内是否存在相应的IP地址。有则使用，无则进入下一步。
+
+下一步：调用操作系统进行缓存查询。万一又没有进入下下一步。
+
+下下一步：请求本地DNS服务器，寻找缓存。万一又又没有进入下下下一步。
+
+下下下一步：查询：
+
+ 1.1 根域名服务器
+
+ 1.2 顶级域名服务器
+
+ 1.3 权威域名服务器
+
+ 最终拿到ip，按上面步骤一步步返回值浏览器。建立连接。
+
+2. 方法：
+
+针对IP，dns，域名，内容的识别与阻断。如ip封锁，dns污染，端口封锁，server name indication , 内容过滤。长城。
+
+解决方法：
+
+2.1 代理服务器，隐藏ip
+
+2.2 vpn，加密
+
+2.3 改DNS，绕过dns污染
+
+3. 获得公网IP
+
+3.1 云服务器
+
+3.2 内网穿透
+
+3.3 申请公网IP
+
+
+
+
+
+
+
+
+
 
 
