--- a/1.md
+++ b/1.md
@@ -225,8 +225,33 @@
 
 3.3 申请公网IP
 
+4.有的兄弟
 
+当**连接时**，client先设置SYN标志位1，然后选择一个序列号，这里定为x。
 
+server呢，接收到这个之后，设置SYN和ACK标志位1，然后选择一个序列号，定为y确认号设为x+1
+
+client接收到之后再发一个确认，ACK1，序列号x+1，确认号y+1.
+
+当**断开时**，client呢接着发报，设置FIN为1，然后序列号
+
+serverACK1，然后确认号为序列号+1
+
+然后反过来重复以上步骤。
+
+至于为什么多一次，我的理解是其实建立/断开连接只需要两次，之所以要三次是因为防止已失效的连接请求报文突然又传到了服务器，从而导致错误
+
+而因为TCP连接是全双工的，每个方向都需要单向断开，所以要四次。
+
+5.http是客户端和服务器之间请求和应答的协议，大概就是client发送HTTP请求，然后客户端给予HTTP响应巴拉巴拉的。大概用于互联网通信，你输入网址到打开网页，就是请求与响应的过程。HTTPS就是加密的HTTP。
+
+~这个代码超纲了QAQ~
+
+---
+
+#有趣的实践
+
+1.（在写这个题之前几乎不了解）
 
 
 
