--- a/1.md
+++ b/1.md
@@ -160,6 +160,8 @@
 
 ~还在了解~
 
+（笔试时间快到了，才了解到SQL是什么，以及relational database 的一些内容，有一说一那个roadmap真的好）
+
 ---
 
 # 可靠的git
@@ -252,6 +254,63 @@ serverACK1，然后确认号为序列号+1
 #有趣的实践
 
 1.（在写这个题之前几乎不了解）
+
+function calling：让大语言模型具备调用外部工具、函数或API的能力
+
+RAG：信息检索
+
+REACT:推理加行动，一步步解决复杂问题
+
+AI Agent：上述技术的集大成者，一个很牛逼的AI系统。
+
+langchain：搭建上述功能的工具
+
+mcp：通信协议，用于llm与数据库，工具的交互。
+
+自用ai：deepseek，copilot，（主要是这两个）
+
+API:（上次看到这个还是steam上的api密匙，用于我go的饰品交易）
+
+Application Programming Interface，应用程序编程接口，不同软件应用程序之间通信的协议规则。
+
+没怎么用过这个
+
+（流式传输吗，才知道是什么）（不会）
+
+2.
+
+进程包含线程包含协程。
+
+进程：资源分配的基本单位
+
+线程：CPU调度的基本单位
+
+协程：用户态的轻量级线程
+
+剩下的太复杂力
+
+2. 4. 芝士什么，看不懂，C语言学习ing
+
+5.6. 虽然不会go，但我是go学长。
+
+7.8. 抽象
+
+---
+
+#益智休闲游戏
+（益智在哪，休闲在哪）看我llm大法
+
+a>c
+
+n-1
+
+deepseek用反证法先证必要性在证充分性
+太难了这个
+
+
+
+
+
 
 
 
